# RomainOS

./: .gitattributes  .gitignore  CMakeLists.txt  GDT.asm  README.md  boot.asm  bootloader.asm  diskRead.asm  extendedSpace.asm  linker.ld  makefile  nextSectors.asm  printString.asm  run.sh
.github/: FUNDING.yml
GCC_Cross-Compiler/: CREDITS  README.md  x86_64-elf-elfedit  x86_64-elf-gcc-ar  x86_64-elf-gcc-nm  x86_64-elf-gcc-ranlib  x86_64-elf-gcov  x86_64-elf-gcov-dump  x86_64-elf-gcov-tool  x86_64-elf-readelf
bootloader/bootSector/: bootloader.asm  diskRead.asm  diskReadSegments.asm  printString.asm
bootloader/secondSector/: CPUID.asm  GDT.asm  IDT.asm  binaries.asm  extendedProgram.asm  memory.asm  paging.asm  system.asm  time.asm
doc/: README.md
efi/: efi_main.cpp  efi_main.hpp
include/std/: memory.hpp  memoryMap.hpp  random.hpp  stack.hpp  string.hpp  system.hpp  time.hpp  types.hpp
kernel/: IDT.cpp  IDT.hpp  icxxabi.cpp  icxxabi.hpp  kernel.cpp  system.cpp  system.hpp
libc/: random.cpp  stack.tpp  time.cpp
libc/include/: SAL  SAL.h  cstddef  cstdint  cstdio  cstdlib  memory.h  random.h  stack  stack.h  stddef.h  stdint.h  stdio.h  stdlib.h  string  string.h  time.h
libc/stddef/: types.cpp
libc/stdio/: keyboard.cpp  keyboard.hpp  keyboardLayout.cpp  keyboardLayout.hpp  printText.cpp  printText.hpp  (+4 more)
scripts/: compile.bat  editLinker.py  linker.ld  linker.ld.bak
src/: GDT.asm  extendedSpace.asm  kernel.cpp  memory.hpp  memoryMap.hpp  paging.asm  printText.hpp  random.hpp  stack.hpp  string.hpp  system.hpp  textColorModes.h  time.hpp  types.hpp
(+70 files in other folders)
